<resources>
    <string name="app_name">AirSharing</string>
    <string name="menu4">Settings</string>
    <string name="title">AIRSHARING</string>
    <string name="id">ID</string>
    <string name="pw">PW</string>
    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="phone">연락처</string>
    <string name="gender">성별</string>
    <string name="m">남자</string>
    <string name="f">여자</string>
    <string name="signup">가입하기</string>
    <string name="findid">아이디를 잊어버리셨나요?</string>
    <string name="findpw">비밀번호를 잊어버리셨나요?</string>
    <string name="cycle">당신의 주기를 선택하세요</string>
    <string-array name="cycle_time">
        <item> 10분 </item>
        <item> 20분 </item>
        <item> 30분 </item>
        <item> 1시간 </item>
        <item> 2시간 </item>
        <item> 3시간 </item>
        <item> 4시간 </item>
    </string-array>
    <string name="title_activity_maps">Map</string>
</resources>
