<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="9"
        android:background="#99ccff">

        <ImageView
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_marginLeft="90dp"
            android:src="@drawable/cloud" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="-10dp"
            android:text="@string/title"
            android:textColor="#ffffff"
            android:textSize="80px"
            android:textStyle="bold" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg2"
        android:layout_gravity="center_horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:background="#A6e2f1fb"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="49dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textSize="70px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/id"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60px"
                    android:hint="id" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pw"
                    android:textSize="70px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/pw"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginLeft="40px"
                    android:hint="비밀번호" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="70px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60px"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:layout_marginLeft="20px"
                    android:textSize="70px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60px" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:layout_marginLeft="20px"
                    android:textSize="70px"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60px"
                    android:hint="핸드폰 번호" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25px"
                android:layout_marginLeft="-40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textSize="70px"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/radiogroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radio1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:text="@string/m"
                        android:textSize="70px" />

                    <RadioButton
                        android:id="@+id/radio2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50px"
                        android:text="@string/f"
                        android:textSize="70px" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="950px"
                android:layout_height="wrap_content"
                android:layout_marginTop="130px"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button3"
                    android:text="@string/signup"
                    android:textColor="#ffffff"
                    android:textSize="25dp" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>